Feedback fixes
-Further fixes on social media icons
-Project card fixes to stop overlapping
-Contact info font changes, now links, with mailto and tel references, as well as spacing size corrections for responsive design.
-Favicon added for pc and mobile devices.

--- a/css/style.css
+++ b/css/style.css
@@ -1040,7 +1040,7 @@ hr.rounded {
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   align-content: center;
 }
 
@@ -1049,13 +1049,29 @@ hr.rounded {
 }
 
 .contact-details h3 {
+  border: 3px solid transparent;
+  padding: 5px 10px;
   margin: 10px 0;
 }
 
-.contact-details h3 span {
-  border-radius: 50%;
-  border: 2px solid white;
+.contact-details a {
+  text-align: center;
+  font-size: 20px;
+  border: 3px solid transparent;
+  border-radius: 10px;
+  transition: ease 0.5s;
+  padding: 5px 10px;
+  margin: 10px 0;
+}
+
+.contact-details a span {
   padding: 5px;
+}
+
+.contact-details a:hover {
+  text-decoration: none;
+  border: 3px solid white;
+  box-shadow: 0px 0px 6px white, 0px 0px 8px #ae00ff, 0px 0px 8px 3px #003cff;
 }
 
 .contact-social {
@@ -1278,8 +1294,8 @@ hr.rounded {
 
 @media (min-width: 768px) {
   .main .inner {
-    padding: 10px 35px 0 35px;
-    margin: 0 35px;
+    padding: 10px 20px 0 20px;
+    margin: 0 25px;
   }
   .container {
     width: 680px;
@@ -1300,7 +1316,7 @@ hr.rounded {
 
 @media (min-width: 992px) {
   .main .inner {
-    padding: 10px 35px 0 35px;
+    padding: 10px 25px 0 25px;
     margin: 0 35px;
   }
   .container {
@@ -1423,10 +1439,6 @@ hr.rounded {
     padding: 3px;
     margin-right: 2px;
   }
-  .inner .container-contact-form .contact-info .contact-social .social-logos a span {
-    font-size: 40px;
-    line-height: 62px;
-  }
 }
 
 @media (min-width: 768px) {
@@ -1464,6 +1476,9 @@ hr.rounded {
   .inner .container-contact-form .contact-info .contact-social .social-logos a {
     margin-right: 5px;
     padding: 8px;
+  }
+  .inner .container-contact-form .contact-info .contact-social .social-logos a span {
+    line-height: 54px;
   }
   .inner .container-contact-form .contact-form {
     margin: 0;
