--- a/scss/layout/home/_contactform.scss
+++ b/scss/layout/home/_contactform.scss
@@ -4,18 +4,32 @@
                 flex-direction: column;
                 flex-wrap: wrap;
                 justify-content: center;
-                align-items: flex-start;
+                align-items: center;
                 align-content: center;
             }
             h1{
                 margin:15px 0;
             }
             h3{
+                border: 3px solid transparent;
+                padding:5px 10px;
+                margin:10px 0;
+            }
+            a{
+
+                text-align: center;
+                font-size:20px;
+                border: 3px solid transparent;
+                border-radius: 10px;
+                transition: ease 0.5s;
+                padding:5px 10px;
                 margin:10px 0;
                 span{
-                    border-radius: 50%;
-                    border:2px solid white;
                     padding: 5px;
+                }
+                &:hover{
+                    text-decoration: none;
+                    @include glowborder('all');
                 }
             }
             display:flex;
