--- a/scss/mediaqueries/_baseQueries.scss
+++ b/scss/mediaqueries/_baseQueries.scss
@@ -9,8 +9,8 @@
 }
 @media (min-width: 768px){
     .main .inner{
-        padding:10px 35px 0 35px;
-        margin:0 35px;
+        padding:10px 20px 0 20px;
+        margin:0 25px;
     }
     .container{
         width:680px;
@@ -31,7 +31,7 @@
 
 @media (min-width: 992px){
     .main .inner{
-        padding:10px 35px 0 35px;
+        padding:10px 25px 0 25px;
         margin:0 35px;
     }
     .container{
