--- a/scss/mediaqueries/home/_contactformqueries.scss
+++ b/scss/mediaqueries/home/_contactformqueries.scss
@@ -9,10 +9,6 @@
                         padding:3px;
                         margin-right:2px;
                         //logo icon
-                        span{
-                            font-size:40px;
-                            line-height: 62px;
-                        }
                     }
                 }   
             }
@@ -76,6 +72,9 @@
                     a{
                         margin-right:5px;
                         padding:8px;
+                        span{
+                            line-height: 54px;
+                        }
                     }
                 }   
             }
